unit tests and update del watchers